--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   google_fonts: 4.0.3
   intl: 0.18.1
   json_path: 0.6.2
+  lottie: 2.7.0
   page_transition: 2.1.0
   path_provider: 2.0.14
   path_provider_android: 2.0.25
