--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: 0.18.1
   json_path: 0.6.2
   lottie: 2.7.0
+  octo_image: 1.0.2
   page_transition: 2.1.0
   path_provider: 2.0.14
   path_provider_android: 2.0.25
