--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
+  #custom
+  package_info_plus: ^3.0.3
+
 dev_dependencies:
   flutter_lints: 3.0.0
   lints: 3.0.0
